Update with Java release and bytecode of java8 details